<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:minEms="15"
        app:boxBackgroundColor="@color/md_theme_onBackground"
        app:boxStrokeColor="@color/material_on_surface_stroke"
        app:boxStrokeWidth="2dp"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/username"
            android:importantForAccessibility="yes"
            android:inputType="textPersonName"
            android:textColor="@color/md_theme_primary"
            android:textColorHint="@color/md_theme_onPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:minEms="15"
        app:boxBackgroundColor="@color/md_theme_onBackground"
        app:boxStrokeColor="@color/material_on_surface_stroke"
        app:boxStrokeWidth="@dimen/_2dp"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@id/submit"
        app:layout_constraintEnd_toEndOf="@id/username"
        app:layout_constraintStart_toStartOf="@id/username"
        app:layout_constraintTop_toBottomOf="@id/username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/password"
            android:importantForAccessibility="yes"
            android:inputType="textPassword"
            android:textColor="@color/md_theme_primary"
            android:textColorHint="@color/md_theme_onPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/md_theme_onPrimary"
        app:backgroundTint="@color/md_theme_primary"
        app:cornerRadius="@dimen/_8dp"
        app:elevation="@dimen/_4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password" />
</androidx.constraintlayout.widget.ConstraintLayout>
